# esco-playground

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  esco-spacy.ipynb  esco.py  pyproject.toml  requirements-dev.txt  requirements-langchain.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: lint.yml  publish.yml  sast.yml
api/: openapi.yaml  routes.py  tasks.py
api/tests/: test_routes.py
esco/: __init__.py  cv.py  ner.py  sparql.py  util.py  vector.py
model/: esco-chunks.ipynb  esco-matcher-subtree.ipynb  esco-neural.ipynb  esco-spacy.ipynb  esco-stats.ipynb  matcher.ipynb  model.py  rpolli.json  rpolli.txt  test_model.py
schemas/: cv.oas3.yaml  openapi.yaml  skills.oas3.yaml
sparql/: lodlive.app.js  lodlive.core.js  lodlive.profile.js  virtuoso.ini  virtuoso.sh
tests/: conftest.py  test_cv_pipeline.py  test_esco.py  test_esco_ner.py  test_localdb_base.py  test_localdb_vector.py  test_ner_base.py  test_ner_skills.py  test_routes.py  test_skill_compound.py  test_skill_mathcer.py  test_skill_pos_matcher.py  test_sparql.py  test_vector.py  test_virtuoso.py
tests/data/: rpolli.json  rpolli.txt  test-ner-skills.yaml  test_cloud_skill.yml
tests/fix_bug/: matcher_skill_fixbugs.ipynb  stats_cloud.ipynb
vocabularies/: courses.ttl  esco-padding.ttl  load.sql
