[project]
name = "esco-playground"
version = "0.0.2"
dynamic = ['dependencies', 'optional-dependencies']

[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.langchain = {file = ["requirements-langchain.txt"]}
optional-dependencies.spacy = {file = ["requirements-spacy.txt"]}

[tool.setuptools.package-data]
esco = ["esco*.json.gz"]

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "*deleteme*"]

[tool.setuptools-git-versioning]
enabled = true
